RESOLVED FIXED139046
ASSERTION FAILED: animatedTypes[0].properties.size() == 1 in WebCore::SVGAnimatedTypeAnimator::constructFromBaseValue
https://bugs.webkit.org/show_bug.cgi?id=139046
Summary ASSERTION FAILED: animatedTypes[0].properties.size() == 1 in WebCore::SVGAnim...
Renata Hodovan
Reported 2014-11-25 09:23:32 PST
Created attachment 242199 [details] Test case Load the following with debug WebKit: <svg> <textPath> <animate attributeName="x"></animate> </textPath> </svg> Backtrace: ASSERTION FAILED: animatedTypes[0].properties.size() == 1 ../../Source/WebCore/svg/SVGAnimatedTypeAnimator.h(74) : std::unique_ptr<typename AnimValType::ContentType> WebCore::SVGAnimatedTypeAnimator::constructFromBaseValue(const SVGElementAnimatedPropertyList&) [with AnimValType = WebCore::SVGAnimatedPropertyTearOff<WebCore::SVGLength>; typename AnimValType::ContentType = WebCore::SVGLength; WebCore::SVGElementAnimatedPropertyList = WTF::Vector<WebCore::SVGElementAnimatedProperties>] Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fff98c4e700 (LWP 7568)] 0x00007fffedc7ea89 in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 321 *(int *)(uintptr_t)0xbbadbeef = 0; #0 0x00007fffedc7ea89 in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 #1 0x00007ffff3ccb904 in WebCore::SVGAnimatedTypeAnimator::constructFromBaseValue<WebCore::SVGAnimatedPropertyTearOff<WebCore::SVGLength> > (this=0x8190d0, animatedTypes=...) at ../../Source/WebCore/svg/SVGAnimatedTypeAnimator.h:74 #2 0x00007ffff3ccae16 in WebCore::SVGAnimatedLengthAnimator::startAnimValAnimation (this=0x8190d0, animatedTypes=...) at ../../Source/WebCore/svg/SVGAnimatedLength.cpp:49 #3 0x00007ffff3cb636f in WebCore::SVGAnimateElementBase::resetAnimatedType (this=0x5d2c80) at ../../Source/WebCore/svg/SVGAnimateElementBase.cpp:212 #4 0x00007ffff3de6917 in WebCore::SVGSMILElement::progress (this=0x5d2c80, elapsed=..., resultElement=0x5d2c80, seekToTime=false) at ../../Source/WebCore/svg/animation/SVGSMILElement.cpp:1103 #5 0x00007ffff3ddb288 in WebCore::SMILTimeContainer::updateAnimations (this=0x610f70, elapsed=..., seekToTime=false) at ../../Source/WebCore/svg/animation/SMILTimeContainer.cpp:293 #6 0x00007ffff3dda7dc in WebCore::SMILTimeContainer::begin (this=0x610f70) at ../../Source/WebCore/svg/animation/SMILTimeContainer.cpp:139 #7 0x00007ffff3cfa613 in WebCore::SVGDocumentExtensions::startAnimations (this=0x5a3450) at ../../Source/WebCore/svg/SVGDocumentExtensions.cpp:100 #8 0x00007ffff30dc079 in WebCore::Document::implicitClose (this=0x646eb0) at ../../Source/WebCore/dom/Document.cpp:2513 #9 0x00007ffff35bbdb3 in WebCore::FrameLoader::checkCallImplicitClose (this=0x5fcae8) at ../../Source/WebCore/loader/FrameLoader.cpp:899 #10 0x00007ffff35bbb1f in WebCore::FrameLoader::checkCompleted (this=0x5fcae8) at ../../Source/WebCore/loader/FrameLoader.cpp:845 #11 0x00007ffff35bb888 in WebCore::FrameLoader::finishedParsing (this=0x5fcae8) at ../../Source/WebCore/loader/FrameLoader.cpp:765 #12 0x00007ffff30e4e39 in WebCore::Document::finishedParsing (this=0x646eb0) at ../../Source/WebCore/dom/Document.cpp:4615 #13 0x00007ffff343a685 in WebCore::HTMLConstructionSite::finishedParsing (this=0x64df58) at ../../Source/WebCore/html/parser/HTMLConstructionSite.cpp:395 #14 0x00007ffff3478109 in WebCore::HTMLTreeBuilder::finished (this=0x64df40) at ../../Source/WebCore/html/parser/HTMLTreeBuilder.cpp:2998 #15 0x00007ffff344343a in WebCore::HTMLDocumentParser::end (this=0x60ffb0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:439 #16 0x00007ffff3443525 in WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd (this=0x60ffb0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:450 #17 0x00007ffff3441fd3 in WebCore::HTMLDocumentParser::prepareToStopParsing (this=0x60ffb0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:165 #18 0x00007ffff3443568 in WebCore::HTMLDocumentParser::attemptToEnd (this=0x60ffb0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:462 #19 0x00007ffff344361f in WebCore::HTMLDocumentParser::finish (this=0x60ffb0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:490 #20 0x00007ffff35ad1f9 in WebCore::DocumentWriter::end (this=0x589970) at ../../Source/WebCore/loader/DocumentWriter.cpp:246 #21 0x00007ffff3598f55 in WebCore::DocumentLoader::finishedLoading (this=0x5898d0, finishTime=0) at ../../Source/WebCore/loader/DocumentLoader.cpp:440 #22 0x00007ffff3598cbe in WebCore::DocumentLoader::notifyFinished (this=0x5898d0, resource=0x5a80b0) at ../../Source/WebCore/loader/DocumentLoader.cpp:374 #23 0x00007ffff364974c in WebCore::CachedResource::checkNotify (this=0x5a80b0) at ../../Source/WebCore/loader/cache/CachedResource.cpp:293 #24 0x00007ffff364984a in WebCore::CachedResource::finishLoading (this=0x5a80b0) at ../../Source/WebCore/loader/cache/CachedResource.cpp:309 #25 0x00007ffff3645f3f in WebCore::CachedRawResource::finishLoading (this=0x5a80b0, data=0x6747c0) at ../../Source/WebCore/loader/cache/CachedRawResource.cpp:104 #26 0x00007ffff35f9c5a in WebCore::SubresourceLoader::didFinishLoading (this=0x5a4d40, finishTime=0) at ../../Source/WebCore/loader/SubresourceLoader.cpp:307 #27 0x00007ffff35f5a3f in WebCore::ResourceLoader::didFinishLoading (this=0x5a4d40, finishTime=0) at ../../Source/WebCore/loader/ResourceLoader.cpp:502 #28 0x00007ffff3f9e209 in WebCore::readCallback (asyncResult=0x6a91d0, data=0x787470) at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:1300 #29 0x00007fffeb8997d6 in async_ready_callback_wrapper (source_object=0x7c66d0, res=0x6a91d0, user_data=user_data@entry=0x787470) at ginputstream.c:523 #30 0x00007fffeb8bf0d5 in g_task_return_now (task=0x6a91d0) at gtask.c:1077 #31 0x00007fffeb8bf0f9 in complete_in_idle_cb (task=0x6a91d0) at gtask.c:1086 #32 0x00007fffeaafea2d in g_main_dispatch (context=0x478020) at gmain.c:3064 #33 g_main_context_dispatch (context=context@entry=0x478020) at gmain.c:3663 #34 0x00007fffeaafed98 in g_main_context_iterate (context=0x478020, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3734 #35 0x00007fffeaaff05a in g_main_loop_run (loop=0x9015f0) at gmain.c:3928 #36 0x00007ffff464b42e in WTF::RunLoop::run () at ../../Source/WTF/wtf/gtk/RunLoopGtk.cpp:59 #37 0x00007ffff2bb8250 in WebKit::ChildProcessMain<WebKit::WebProcess, WebKit::WebProcessMain> (argc=2, argv=0x7fffffffd968) at ../../Source/WebKit2/Shared/unix/ChildProcessMain.h:61 #38 0x00007ffff2bb80b5 in WebKit::WebProcessMainUnix (argc=2, argv=0x7fffffffd968) at ../../Source/WebKit2/WebProcess/gtk/WebProcessMainGtk.cpp:73 #39 0x0000000000400891 in main (argc=2, argv=0x7fffffffd968) at ../../Source/WebKit2/WebProcess/EntryPoint/unix/WebProcessMain.cpp:44
Attachments
Test case (89 bytes, text/html)
2014-11-25 09:23 PST, Renata Hodovan
no flags
Patch (5.67 KB, patch)
2014-11-26 23:00 PST, Said Abou-Hallawa
krit: review+
ossy: commit-queue-
Said Abou-Hallawa
Comment 1 2014-11-26 23:00:49 PST
Dirk Schulze
Comment 2 2014-11-27 01:11:53 PST
Comment on attachment 242244 [details] Patch r=me
Csaba Osztrogonác
Comment 3 2014-12-11 03:41:41 PST
Comment on attachment 242244 [details] Patch Rejecting attachment 242244 [details] from commit-queue. sabouhallawa@apple.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Dean Jackson
Comment 4 2014-12-11 11:35:37 PST
Note You need to log in before you can comment on or make changes to this bug.